fixed close button flickering bug.

--- a/src/components/SearchBox/SearchBox.less
+++ b/src/components/SearchBox/SearchBox.less
@@ -52,7 +52,7 @@
   background-color: transparent;
   z-index: 1;
 
-  &:hover {
+  &.hovering {
     border-color: @ms-color-themePrimary;
     background-color: fade(@ms-color-themePrimary, 20%);
 
